Update navigation links to point to index.html and add new index.html file for homepage

--- a/html/education.html
+++ b/html/education.html
@@ -35,7 +35,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="homePage.html">Home</a>
+                    <a href="/index.html">Home</a>
                 </li>
                 <li>
                     <a href="education.html" class="active">Education</a>
@@ -101,7 +101,7 @@
                 <i class="fa-solid fa-xmark"></i>
             </div>
             <div>
-                <img src="https://scontent.fsgn2-9.fna.fbcdn.net/v/t39.30808-6/468316978_1969621136884054_674414844445456683_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_ohc=P3Ddn7YJUfsQ7kNvgEHEHE5&_nc_oc=Adh3iRIxI9KkybYJt6nO3XXRKZVPK2yf5CqgvT_Z7oggXR3EBmrniYAnKvGqidje8q8&_nc_zt=23&_nc_ht=scontent.fsgn2-9.fna&_nc_gid=AkE1S7pH2PXPIH3xSGllg9G&oh=00_AYDGBFRGmroOpFafjV6TygyzomowXoazalr1Kzmqim1Mqg&oe=67C4EF8C"
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyzFRHfvfWul8CaBpfvvFaQJHAswPqVYkNTg&s"
                     alt="school"/>
             </div>
         </div>
