--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="homePage.html" class="active">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="education.html">Education</a>
+                    <a href="./html/education.html">Education</a>
                 </li>
                 <li>
-                    <a href="skills.html">Skills</a>
+                    <a href="./html/skills.html">Skills</a>
                 </li>
                 <li>
-                    <a href="projects.html">Project</a>
+                    <a href="./html/projects.html">Project</a>
                 </li>
                 <li>
-                    <a href="about.html">About</a>
+                    <a href="./html/about.html">About</a>
                 </li>
             </ul>
         </nav>
@@ -76,7 +76,7 @@
         <div class="next-button">
             <p>Explore more about me</p>
             <a class="material-symbols-outlined"
-                href="education.html">
+                href="./html/education.html">
                 arrow_right_alt
             </a>
         </div>
