--- a/html/skills.html
+++ b/html/skills.html
@@ -35,7 +35,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="homePage.html">Home</a>
+                    <a href="/index.html">Home</a>
                 </li>
                 <li>
                     <a href="education.html">Education</a>
