Fix CSS file paths in index.html for correct loading

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>My Portfolio</title>
     
     <!--CSS-->
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/homePage.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/homePage.css">
 
     <link rel="icon" href="https://i.pinimg.com/736x/89/58/1d/89581d93370b5616ae6a37052d34979c.jpg" type="image/x-icon">
     <!--FONT-->
