--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div>
-            <img src="../assets/icon.png" alt="logo">
+            <img src="/assets/icon.png" alt="logo">
             <p>Phuong</p>
         </div>
         <nav>
