--- a/html/education.html
+++ b/html/education.html
@@ -35,7 +35,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/index.html">Home</a>
+                    <a href="../index.html">Home</a>
                 </li>
                 <li>
                     <a href="education.html" class="active">Education</a>
